--- a/vectors_en.html
+++ b/vectors_en.html
@@ -627,7 +627,7 @@
             <section id="Exercise 1">
                 <h3>Exercise 1</h3>
                 <p>
-                    A boatman is rowing on the boat, wanting to always stay perpendicular to the river bank and crossing with an average speed of <span id="2_1avgSpeed"></span> km/h. The river water flows with a speed of <span id="2_1riverSpeed"></span> km/h. How fast should the boat be propelled? In what direction?
+                    A boatman is rowing on the boat, wanting to always stay perpendicular to the river bank and crossing with an average speed of <span id="e_1avgSpeed"></span> km/h. The river water flows with a speed of <span id="e_1riverSpeed"></span> km/h. How fast should the boat be propelled? In what direction?
                 </p>
                 <p>
                     The velocity of the boat \(\vec v_b\) is the sum of the velocity with which the boat \(\vec v_p\) is propelled by the boatman plus the velocity of the river water \(\vec v_r\). Then:
@@ -639,19 +639,19 @@
                     If we choose the coordinate plane so that the x-axis has the same direction as the river, the vector components are:
                 </p>
                 <p>
-                    &emsp; \(\vec v_b\) = (<span id="2_1vBoat"></span>) Km/h,
+                    &emsp; \(\vec v_b\) = (<span id="e_1vBoat"></span>) Km/h,
                 </p>
                 <p>
-                    &emsp; \(\vec v_r\) = (<span id="2_1vRiver"></span>) Km/h,
+                    &emsp; \(\vec v_r\) = (<span id="e_1vRiver"></span>) Km/h,
                 </p>
                 <p>
-                    &emsp; \(\vec v_p\) = (<span id="2_1vBoat1"></span>) - (<span id="2_1vRiver1"></span>) = (<span id="2_1vPropelled"></span>) Km/h,
+                    &emsp; \(\vec v_p\) = (<span id="e_1vBoat1"></span>) - (<span id="e_1vRiver1"></span>) = (<span id="e_1vPropelled"></span>) Km/h,
                 </p>
                 <p>
                     The magnitude of the vector \(\vec v_p\) is the speed at which the boat is propelled, is expressed as \(\Vert\vec v_p\Vert\) and, according to \eqref{eq:6_1}, is calculated as:
                 </p>
                 <p>
-                    &emsp; \(\Vert\vec v_p\Vert = \sqrt{v_x^2 + v_y^2} = \sqrt{9^2 + 36^2} = \sqrt{81+1296} = \sqrt {1377}\) = <span id="2_1normvPropelled"></span> Km/h.
+                    &emsp; \(\Vert\vec v_p\Vert = \sqrt{v_x^2 + v_y^2} = \sqrt{9^2 + 36^2} = \sqrt{81+1296} = \sqrt {1377}\) = <span id="e_1normvPropelled"></span> Km/h.
                 </p>
                 <p>
                     The value of the angle &phi; is the direction in which the boat is propelled, corresponds to the orientation of \(\vec v_p\) and according to \eqref{eq:10_3}, is calculated as:
@@ -660,13 +660,13 @@
                     &emsp; $$\phi = \arccos\frac{\Vert\vec v_p\Vert\cdot\Vert\vec v_r\Vert}{\vec v_p\cdot\vec v_r}$$ 
                 </p>
                 <p>
-                    &emsp; \(\phi = \)<span id="2_1phi1"></span>º
+                    &emsp; \(\phi = \)<span id="e_1phi1"></span>º
                 </p>
                 <p>
-                    So, the answer to the exercise is that the boat must be propeled at a speed of <span id="2_1normvPropelled1"></span> Km/h and in a direction that forms <span id="2_1phi2"></span>º with the river.
+                    So, the answer to the exercise is that the boat must be propeled at a speed of <span id="e_1normvPropelled1"></span> Km/h and in a direction that forms <span id="e_1phi2"></span>º with the river.
                 </p>
                 <figure class="centered">
-                    <svg id="svg2_1"></svg>
+                    <svg id="svge_1"></svg>
                     <figcaption><b>Figure 2.1</b>, showing coordinate-plane, \(\vec v_r\) as the water velocity and \(\vec v\) as the velocity with which the boat is propelled.</figcaption>
                 </figure>
                 <aside><!--References-->
@@ -713,14 +713,14 @@
             <section id="Exercise 2">
                 <h3>Exercise 2</h3>
                 <p>
-                    Draw, one after the other, the vectors \(\vec a = 2\vec i + 3\vec j\),  \(\vec b = 4\vec i - 2\vec j\), \(\vec c = 3\vec i - 2\vec j\) and \(\vec d = -9\vec i + \vec j\). Calculate the vector resulting from the sum of all of them and its magnitude.
+                    Draw, one after the other, the vectors \(\vec a = 2\hat{\imath} + 3\hat{\jmath}\),  \(\vec b = 4\hat{\imath} - 2\hat{\jmath}\), \(\vec c = 3\hat{\imath} - 2\hat{\jmath}\) and \(\vec d = -9\hat{\imath} + \hat{\jmath}\). Calculate the vector resulting from the sum of all of them and its magnitude.
                 </p>
                 <figure class="centered">
-                    <svg id="svg2_2"></svg>
+                    <svg id="svge_2"></svg>
                     <figcaption><b>Figure 2.2</b>, showing the sum of \(\vec a\), \(\vec b\), \(\vec c\) and \(\vec d\) using the graphical method.</figcaption>
                 </figure>
                 <p>
-                    It can be seen that the origin of \(\vec a\) coincides with the end of (\vec d\). So the vector resulting from said sum is the vector (\vec 0\), and its magnitude is zero.
+                    It can be seen that the origin of \(\vec a\) coincides with the end of \(\vec d\). So the vector resulting from said sum is the vector (\vec 0\), and its magnitude is zero.
                 </p>
                 <aside>
                     <h4>References</h4>
@@ -738,13 +738,13 @@
             <section id="Exercise 3">
                 <h3>Exercise 3</h3>
                 <p>
-                    A sailboat is moving with a speed of <span id="2_3sailboatSpeed"></span> km/h in the NNE (north-northeast) direction. What are the components of the speed of the ship in the North direction and in the East direction?
+                    A sailboat is moving with a speed of <span id="e_3sailboatSpeed"></span> km/h in the NNE (north-northeast) direction. What are the components of the speed of the ship in the North direction and in the East direction?
                 </p>
                 <p>
                     If we place the x-axis in the easterly direction and the y-axis in the north direction, the NNE (north-northeast) direction forms an angle of 67.5º, or 3&pi;/8 radians, with the east; as shown in the figure below.
                 </p>
                 <figure class="centered">
-                    <svg id="svg2_3"></svg>
+                    <svg id="svge_3"></svg>
                     <figcaption><b>Figure 2.3</b>, showing NNE direction, velocity \(\vec V\) and its components \(\vec V_x\) and \(\vec V_y\).</figcaption>
                 </figure>
                 <p>
@@ -753,8 +753,8 @@
                 <p>
                     Then, to calculate the value of the component \(\vec V_x\) of \(\vec V\) we use the expresion \eqref{eq:6_3} and to calculate the value of \(\vec V_y\) we use the expresion \eqref{eq:6_4}. With \(\Vert\vec V\Vert\) = 4 km/h and &theta; = 67.5º`.
                 </p>
-                <p>&emsp; \(\vec V_x = 4\cdot\cos 65,7º\)= <span id="2_3Vx"></span> km/h</p>
-                <p>&emsp; \(\vec V_y = 4\cdot\sin65,7º\)= <span id="2_3Vy"></span> km/h</p>
+                <p>&emsp; \(\vec V_x = 4\cdot\cos 65,7º\)= <span id="e_3Vx"></span> km/h</p>
+                <p>&emsp; \(\vec V_y = 4\cdot\sin65,7º\)= <span id="e_3Vy"></span> km/h</p>
                 <aside> <h4>References</h4>
                     <ul >
                         <li> 
@@ -771,7 +771,7 @@
             <section id="Exercise 4">
                 <h3>Exercise 4</h3>
                 <p>
-                    An object moves in such a way that its speed at a certain instant is <span id="2_4Speed1"></span> m/s and forms an angle of <span id="2_4orientation1"></span>º with the horizontal. Find the horizontal and vertical components of the velocity. Express the velocity vector as a function of its components.
+                    An object moves in such a way that its speed at a certain instant is <span id="e_4Speed1"></span> m/s and forms an angle of <span id="e_4orientation1"></span>º with the horizontal. Find the horizontal and vertical components of the velocity. Express the velocity vector as a function of its components.
                 </p>
                 <p>
                     The formulas to calculate the components of a vector \(\vec v\) given its magnitude \(\Vert\vec v\Vert\) and direction &theta; are given by the expresions \eqref{eq:6_3} and \eqref{eq:6_4}:
@@ -779,11 +779,11 @@
                 <p>&emsp; \(\vec v_x = \Vert\vec v\Vert\\cos \theta \cdot\vec i\) </p>
                 <p>&emsp; \(\vec v_y = \Vert\vec v\Vert\\sin \theta \cdot\vec j\) </p>
                 <p>&emsp; \(\vec v = \vec v_x + \vec v_y\) </p>
-                <p>Where \(\Vert\vec v\Vert\\) = <span id="2_4Speed2"></span> m/s, and &theta; = <span id="2_4orientation2"></span>º. So</p>
-                <p>&emsp; \(\vec v_x = 120\cos30º = 120\cdot\sqrt3/2\)  = <span id="2_4Vx1"></span> m/s </p>
-			    <p>&emsp; \(\vec v_y = 120\sin30º = 120\cdot1/2\) = <span id="2_4Vy1"></span> m/s </p>
+                <p>Where \(\Vert\vec v\Vert\\) = <span id="e_4Speed2"></span> m/s, and &theta; = <span id="e_4orientation2"></span>º. So</p>
+                <p>&emsp; \(\vec v_x = 120\cos30º = 120\cdot\sqrt3/2\)  = <span id="e_4Vx1"></span> m/s </p>
+			    <p>&emsp; \(\vec v_y = 120\sin30º = 120\cdot1/2\) = <span id="e_4Vy1"></span> m/s </p>
                 <p>And</p>
-                <p>&emsp; \(\vec v\) = <span id="2_4Vx2"></span>\(\cdot\vec i\) + <span id="2_4Vy2"></span>\(\cdot\vec j\) m/s</p>
+                <p>&emsp; \(\vec v\) = <span id="e_4Vx2"></span>\(\cdot\vec i\) + <span id="e_4Vy2"></span>\(\cdot\vec j\) m/s</p>
                 <aside>
                     <h4>References</h4>
                     <ul>
@@ -826,13 +826,13 @@
                 </p>
                 <p>&emsp; $$\cos\theta  = \frac{\vec v\cdot\vec w}{\vert\vec v\vert\cdot\vert\vec w\vert}$$</p>
                 <p>Then</p>
-                <p>&emsp; \(\vec v\cdot\vec w = (5, -3, 2)\cdot(-2, 1, 3) = 5\cdot(-2) -3\cdot1 + 2\cdot3\) = -10 -3 + 6 = <span id="2_5escProd1"></span></p>
+                <p>&emsp; \(\vec v\cdot\vec w = (5, -3, 2)\cdot(-2, 1, 3) = 5\cdot(-2) -3\cdot1 + 2\cdot3\) = -10 -3 + 6 = <span id="e_5escProd1"></span></p>
 			    <p>&emsp; \(\vert\vec v\vert = \sqrt{5^2 + (-3)^2 + 2^2} = \sqrt{25 + 9 + 4} = \sqrt{38}\)</p>
                 <p>&emsp; \(\vert\vec w\vert = \sqrt{(-2)^2 + 1^2 + 3^2} = \sqrt{4 + 1 + 9} = \sqrt {14}\)</p>   
                 <p>
                     &emsp; $$\theta  = \arccos\frac{\vec v\cdot\vec w}{\vert\vec v\cdot\vert\vec w\vert} = \arccos\frac{-7}{\sqrt {38}\cdot\sqrt {14}} = arccos\frac{-\sqrt 7}{2\cdot\sqrt {19}}$$
                 </p>
-                <p>&emsp; &theta; = <span id="2_5angle1"></span>º</p>
+                <p>&emsp; &theta; = <span id="e_5angle1"></span>º</p>
                 <aside><h4>References</h4>
                     <ul>
                         <li>
@@ -855,13 +855,13 @@
             <section id="Exercise 6">
                 <h3>Exercise 6</h3>
                 <p>
-                    An airplane is moving with a speed of <span id="2_6speed1"></span> km/h in the NE direction. Find the projection of its velocity onto the east direction.
+                    An airplane is moving with a speed of <span id="e_6speed1"></span> km/h in the NE direction. Find the projection of its velocity onto the east direction.
                 </p>
                 <p>
-                    The NE (northeast) direction forms an angle of <span id="2_6angle1"></span>º with the east direction, as in figure below.
+                    The NE (northeast) direction forms an angle of <span id="e_6angle1"></span>º with the east direction, as in figure below.
                 </p>
                 <figure class="centered">
-                    <svg id="svg2_6"></svg>
+                    <svg id="svge_6"></svg>
                     <figcaption><b>Figure 2.6</b>, showing angle between E and NE and \( proj_E \vec v\).</figcaption>
                 </figure>
                 <p>
@@ -869,9 +869,9 @@
                 </p>
                 <p> &emsp; \(\vert proj_E \vec v\vert = \vert\vec v\vert\cos\theta\)</p>
                 <p>
-                    Where \(\vert\vec v\vert\) = <span id="2_6speed2"></span> Km/h and &theta;=<span id="2_6angle2"></span>º. So
+                    Where \(\vert\vec v\vert\) = <span id="e_6speed2"></span> Km/h and &theta;=<span id="e_6angle2"></span>º. So
                 </p>
-                <p> &emsp; \(\vert proj_E \vec v\vert = 600\cdot\cos45º\) = <span id="2_6projection"></span> Km/h</p>
+                <p> &emsp; \(\vert proj_E \vec v\vert = 600\cdot\cos45º\) = <span id="e_6projection"></span> Km/h</p>
                 <aside><h4>References</h3>
                     <ul>
                         <li>
@@ -895,8 +895,8 @@
                 <p>
                     &emsp;$$\vec v = \vec w \times \vec r = \begin{vmatrix}\vec i & \vec j & \vec k \\ 1 & 1 & 1 \\ 2 & -2 & 1\\ \end{vmatrix} = \begin{vmatrix} 1 & 1 \\ -2 & 1 \\ \end{vmatrix} \vec i - \begin{vmatrix} 1 & 1 \\ 2 & 1\\ \end{vmatrix} \vec j + \begin{vmatrix} 1 & 1 \\ 2 & -2 \\ \end{vmatrix}\vec k = (1+2)\vec i -(1-2)\vec j + (-2-2)\vec k = 3\vec i + \vec j -4\vec k$$
                 </p>
-                <p>Or \(\vec v\) = (<span id="2_7v"></span>)</p>
-                <p> \(\vec v = \vec w \times \vec r =\) <span id="2_7_1" class ="math-inline-block"></span> = <span id="2_7_2"></span></p>
+                <p>Or \(\vec v\) = (<span id="e_7v"></span>)</p>
+                <p> \(\vec v = \vec w \times \vec r =\) <span id="e_7_1" class ="math-inline-block"></span> = <span id="e_7_2"></span></p>
             </section>
             <section id="Exercise 8">
                 <h3>Exercise 8</h3>
