--- a/vectors_es.html
+++ b/vectors_es.html
@@ -623,7 +623,7 @@
             <section id="Ejercicio 1">
 				<h3>Ejercicio 1</h3>
                 <p>
-                    Un barquero está remando en el bote, queriendo mantenerse siempre perpendicular a la orilla del río y cruzando con una velocidad media de <span id="2_1avgSpeed"></span> km/h. El agua del río fluye a una velocidad de <span id="2_1riverSpeed"></span> km/h. ¿A qué velocidad debe propulsarse el bote? ¿En qué dirección?
+                    Un barquero está remando en el bote, queriendo mantenerse siempre perpendicular a la orilla del río y cruzando con una velocidad media de <span id="e_1avgSpeed"></span> km/h. El agua del río fluye a una velocidad de <span id="e_1riverSpeed"></span> km/h. ¿A qué velocidad debe propulsarse el bote? ¿En qué dirección?
                 </p>
                 <p>
                     La velocidad del bote \(\vec v_b\) es la suma de la velocidad con la que el barquero propulsa el bote \(\vec v_p\) más la velocidad del agua del río \(\vec v_r\). Entonces:
@@ -635,19 +635,19 @@
                     Si elegimos el plano de coordenadas de manera que el eje x tenga la misma dirección que el río:
                 </p>
                 <p>
-                    &emsp; \(\vec v_b\) = (<span id="2_1vBoat"></span>) Km/h,
+                    &emsp; \(\vec v_b\) = (<span id="e_1vBoat"></span>) Km/h,
                 </p>
                 <p>
-                    &emsp; \(\vec v_r\) = (<span id="2_1vRiver"></span>) Km/h,
+                    &emsp; \(\vec v_r\) = (<span id="e_1vRiver"></span>) Km/h,
                 </p>
                 <p>
-                    &emsp; \(\vec v_p\) = (<span id="2_1vBoat1"></span>) - (<span id="2_1vRiver1"></span>) = (<span id="2_1vPropelled"></span>) Km/h,
+                    &emsp; \(\vec v_p\) = (<span id="e_1vBoat1"></span>) - (<span id="e_1vRiver1"></span>) = (<span id="e_1vPropelled"></span>) Km/h,
                 </p>
                 <p>
                     La magnitud del vector \(\vec v_p\) es la velocidad a la que se impulsa el bote, se expresa como \(\Vert\vec v_p\Vert\) y, según \eqref{eq:6_1}, se calcula como:
                 </p>
                 <p>
-                    &emsp; \(\Vert\vec v_p\Vert = \sqrt{v_x^2 + v_y^2} = \sqrt{9^2 + 36^2} = \sqrt{81+1296} = \sqrt {1377}\) = <span id="2_1normvPropelled"></span> Km/h.
+                    &emsp; \(\Vert\vec v_p\Vert = \sqrt{v_x^2 + v_y^2} = \sqrt{9^2 + 36^2} = \sqrt{81+1296} = \sqrt {1377}\) = <span id="e_1normvPropelled"></span> Km/h.
                 </p>
                 <p>
                     El valor del ángulo  &phi; es la dirección en la que se impulsa el bote, corresponde con la orientación de \(\vec v_p\) y según \eqref{eq:10_3}, se calcula como:
@@ -658,13 +658,13 @@
 					\end{flalign}
 				</p>
                 <p>
-                    &emsp; &phi; = <span id="2_1phi1"></span>º
+                    &emsp; &phi; = <span id="e_1phi1"></span>º
                 </p>
                 <p>
-                    Entonces, la respuesta al ejercicio es que la embarcación debe ser impulsada a una velocidad de <span id="2_1normvPropelled1"></span> Km/h y en una dirección que forme <span id="2_1phi2"></span>º con el río.
+                    Entonces, la respuesta al ejercicio es que la embarcación debe ser impulsada a una velocidad de <span id="e_1normvPropelled1"></span> Km/h y en una dirección que forme <span id="e_1phi2"></span>º con el río.
                 </p>
                 <figure class="centered">
-                    <svg id="svg2_1"></svg>
+                    <svg id="svge_1"></svg>
                     <figcaption><b>Figura 2.1</b>, mostrando plano de coordenadas, \(\vec v_r\) como la velocidad del agua del río y \(\vec v\) como la velocidad con la que se propulsa el bote.</figcaption>
                 </figure>
                 <aside><!--References-->
@@ -712,14 +712,14 @@
             <section id="Ejercicio 2">
 				<h3>Ejercicio 2</h3>
                 <p class="lang lang-es" lang="es">
-                    Dibuja, uno a continuación del otro, los vectores \(\vec a = 2\vec i + 3\vec j\),  \(\vec b = 4\vec i - 2\vec j\), \(\vec c = 3\vec i - 2\vec j\) y \(\vec d = -9\vec i + \vec j\). Calcula el vector resultante de la suma de todos ellos y su magnitud. 
+                    Dibuja, uno a continuación del otro, los vectores \(\vec a = 2\hat{\imath} + 3\hat{\jmath}\),  \(\vec b = 4\hat{\imath} - 2\hat{\jmath}\), \(\vec c = 3\hat{\imath} - 2\hat{\jmath}\) y \(\vec d = -9\hat{\imath} + \hat{\jmath}\). Calcula el vector resultante de la suma de todos ellos y su magnitud. 
                 </p>
                 <figure class="centered">
-                    <svg id="svg2_2"></svg>
+                    <svg id="svge_2"></svg>
                     <figcaption><b>Figura 2.2</b>, mostrando la suma de \(\vec a\), \(\vec b\), \(\vec c\) y \(\vec d\) por el método gráfico.</figcaption>
                 </figure>
                 <p>
-                    Se puede observar que el origen de \(\vec a\) coincide con el final de (\vec d\). Así que el vector resultante de dicha suma es el vector (\vec 0\),  y su magnitud es cero.
+                    Se puede observar que el origen de \(\vec a\) coincide con el final de \(\vec d\). Así que el vector resultante de dicha suma es el vector (\vec 0\), y su magnitud es cero.
                 </p>
                 <aside><h4>Referencias</h4>
                     <ul>
@@ -736,13 +736,13 @@
             <section id="Ejercicio 3">
 				<h3>Ejercicio 3</h3>
                 <p>
-                    Un barco de vela se mueve con una velocidad de <span id="2_3sailboatSpeed"></span> km/h en la dirección NNE (nornoreste). ¿Cuáles son las componentes de la velocidad del barco en dirección Norte y en dirección Este? 
+                    Un barco de vela se mueve con una velocidad de <span id="e_3sailboatSpeed"></span> km/h en la dirección NNE (nornoreste). ¿Cuáles son las componentes de la velocidad del barco en dirección Norte y en dirección Este? 
                 </p>
                 <p>
                     Si situamos el eje x en la dirección este y el eje y en la dirección norte, la dirección NNE (nornoreste) está orientada formando un ángulo de 67,5º, o 3&pi;/8 radianes, con el este; según se muestra en la siguiente figura.
                 </p> 
                 <figure class="centered">
-                    <svg id="svg2_3"></svg>
+                    <svg id="svge_3"></svg>
                     <figcaption><b>Figura 2.3</b>, mostrando la dirección NNE, velocidad \(\vec V\) y sus componentes \(\vec V_x\) y \(\vec V_y\).</figcaption>
                 </figure>
                 <p>
@@ -751,8 +751,8 @@
                 <p >
                     Entonces calculamos el valor de la componente \(\vec V_x\) de \(\vec V\) mediante la expresión \eqref{eq:6_3}, el valor de \(\vec V_y\) mediante la expresión \eqref{eq:6_4}. Siendo \(\Vert\vec V\Vert\) = 4 km/h y &theta; = 67.5º`.
                 </p>
-                <p>&emsp; \(\vec V_x = 4\cdot\cos 65,7º\)= <span id="2_3Vx"></span> km/h</p>
-                <p>&emsp; \(\vec V_y = 4\cdot\sin65,7º\)= <span id="2_3Vy"></span> km/h</p>
+                <p>&emsp; \(\vec V_x = 4\cdot\cos 65,7º\)= <span id="e_3Vx"></span> km/h</p>
+                <p>&emsp; \(\vec V_y = 4\cdot\sin65,7º\)= <span id="e_3Vy"></span> km/h</p>
                 <aside> <h4>Referencias</h4>
                     <ul >
                         <li>
@@ -769,7 +769,7 @@
             <section id="Ejercicio 4">
 				<h3>Ejercicio 4</h3>
                 <p>
-                    Un objeto se mueve de tal manera que su velocidad en un instante determinado es de <span id="2_4Speed1"></span> m/s y forma un ángulo de <span id="2_4orientation1"></span>º con la horizontal. Halla las componentes horizontal y vertical de la velocidad. Expresa el vector velocidad en función de sus componentes.
+                    Un objeto se mueve de tal manera que su velocidad en un instante determinado es de <span id="e_4Speed1"></span> m/s y forma un ángulo de <span id="e_4orientation1"></span>º con la horizontal. Halla las componentes horizontal y vertical de la velocidad. Expresa el vector velocidad en función de sus componentes.
                 </p>
                 <p>
                     The formulas to calculate the components of a vector \(\vec v\) given its magnitude \(\Vert\vec v\Vert\) and direction &theta; vienen definidas por las expresiones \eqref{eq:6_3} y \eqref{eq:6_4}:
@@ -777,11 +777,11 @@
                 <p>&emsp; \(\vec v_x = \Vert\vec v\Vert\\cos \theta \cdot\vec i\) </p>
                 <p>&emsp; \(\vec v_y = \Vert\vec v\Vert\\sin \theta \cdot\vec j\) </p>
                 <p>&emsp; \(\vec v = \vec v_x + \vec v_y\) </p>
-                <p>Donde  \(\Vert\vec v\Vert \) = <span id="2_4Speed2"></span> m/s, y &theta; = <span id="2_4orientation2"></span>º. Así que</p>
-                <p>&emsp; \(\vec v_x = 120\cos30º = 120\cdot\sqrt3/2\)  = <span id="2_4Vx1"></span> m/s </p>
-			    <p>&emsp; \(\vec v_y = 120\sin30º = 120\cdot1/2\) = <span id="2_4Vy1"></span> m/s </p>
+                <p>Donde  \(\Vert\vec v\Vert \) = <span id="e_4Speed2"></span> m/s, y &theta; = <span id="e_4orientation2"></span>º. Así que</p>
+                <p>&emsp; \(\vec v_x = 120\cos30º = 120\cdot\sqrt3/2\)  = <span id="e_4Vx1"></span> m/s </p>
+			    <p>&emsp; \(\vec v_y = 120\sin30º = 120\cdot1/2\) = <span id="e_4Vy1"></span> m/s </p>
                 <p>Y</p>
-                <p>&emsp; \(\vec v\) = <span id="2_4Vx2"></span>\(\cdot\vec i\) + <span id="2_4Vy2"></span>\(\cdot\vec j\) m/s</p>
+                <p>&emsp; \(\vec v\) = <span id="e_4Vx2"></span>\(\cdot\vec i\) + <span id="e_4Vy2"></span>\(\cdot\vec j\) m/s</p>
                 <aside><h4>Referencias</h4>
                     <ul>
                         <li>
@@ -823,14 +823,14 @@
                 </p>
                 <p>&emsp; $$\cos\theta  = \frac{\vec v\cdot\vec w}{\vert\vec v\vert\cdot\vert\vec w\vert}$$</p>
                 <p>Entonces,</p>
-                <p>&emsp; \(\vec v\cdot\vec w = (5, -3, 2)\cdot(-2, 1, 3) = 5\cdot(-2) -3\cdot1 + 2\cdot3\) = -10 -3 + 6 = <span id="2_5escProd1"></span></p>
+                <p>&emsp; \(\vec v\cdot\vec w = (5, -3, 2)\cdot(-2, 1, 3) = 5\cdot(-2) -3\cdot1 + 2\cdot3\) = -10 -3 + 6 = <span id="e_5escProd1"></span></p>
                 
 			    <p>&emsp; \(\vert\vec v\vert = \sqrt{5^2 + (-3)^2 + 2^2} = \sqrt{25 + 9 + 4} = \sqrt{38}\)</p>
                 <p>&emsp; \(\vert\vec w\vert = \sqrt{(-2)^2 + 1^2 + 3^2} = \sqrt{4 + 1 + 9} = \sqrt {14}\)</p>   
                 <p>
                     $$\theta  = \arccos\frac{\vec v\cdot\vec w}{\vert\vec v\cdot\vert\vec w\vert} = \arccos\frac{-7}{\sqrt {38}\cdot\sqrt {14}} = arccos\frac{-\sqrt 7}{2\cdot\sqrt 19} $$  
                 </p>
-                <p>&emsp; &theta; = <span id="2_5angle1"></span>º</p>
+                <p>&emsp; &theta; = <span id="e_5angle1"></span>º</p>
                 <aside><h4>Referencias</h4>
                     <ul>
                         <li>
@@ -853,13 +853,13 @@
             <section id="Ejercicio 6">
 				<h3>Ejercicio 6</h3>
                 <p>
-                    Un avión se desplaza a una velocidad de <span id="2_6speed1"></span> km/h en dirección NE. Halla la proyección de su velocidad en la dirección este.
+                    Un avión se desplaza a una velocidad de <span id="e_6speed1"></span> km/h en dirección NE. Halla la proyección de su velocidad en la dirección este.
                 </p>
                 <p>
-                    la dirección NE (noreste) forma un ángulo de <span id="2_6angle1"></span>º con la dirección este, como se muestra en la siguiente figura.
+                    la dirección NE (noreste) forma un ángulo de <span id="e_6angle1"></span>º con la dirección este, como se muestra en la siguiente figura.
                 </p>
                 <figure class="centered">
-                    <svg id="svg2_6"></svg>
+                    <svg id="svge_6"></svg>
                     <figcaption><b>Figura 2.6</b>, mostrando el ángulo formado entre E y NE, así como la \( proj_E \vec v\).</figcaption>
                 </figure>
                 <p>
@@ -867,9 +867,9 @@
                 </p>
                 <p> &emsp; \(\vert proj_E \vec v\vert = \vert\vec v\vert\cos\theta\)</p>
                 <p>
-                    Donde \(\vert\vec v\vert\) = <span id="2_6speed2"></span> Km/h y &theta;=<span id="2_6angle2"></span>º. Entonces
+                    Donde \(\vert\vec v\vert\) = <span id="e_6speed2"></span> Km/h y &theta;=<span id="e_6angle2"></span>º. Entonces
                 </p>
-                <p> &emsp; \(\vert proj_E \vec v\vert = 600\cdot\cos45º\) = <span id="2_6projection"></span> Km/h</p>
+                <p> &emsp; \(\vert proj_E \vec v\vert = 600\cdot\cos45º\) = <span id="e_6projection"></span> Km/h</p>
                 <aside><h4>Referencias</h3>
                     <ul>
                         <li>
@@ -894,7 +894,7 @@
                     &emsp;$$\vec v = \vec w \times \vec r = \begin{vmatrix}\vec i & \vec j & \vec k \\ 1 & 1 & 1 \\ 2 & -2 & 1\\ \end{vmatrix} = \begin{vmatrix} 1 & 1 \\ -2 & 1 \\ \end{vmatrix} \vec i - \begin{vmatrix} 1 & 1 \\ 2 & 1\\ \end{vmatrix} \vec j + \begin{vmatrix} 1 & 1 \\ 2 & -2 \\ \end{vmatrix}\vec k = (1+2)\vec i -(1-2)\vec j + (-2-2)\vec k = 3\vec i + \vec j -4\vec k$$
                 </p>
                 <p>Que se puede escribir de una manera más simple como sigue:</p>
-                <p> \(\vec v = \vec w \times \vec r =\) <span id="2_7_1" class ="math-inline-block"></span> = <span id="2_7_2"></span></p>
+                <p> \(\vec v = \vec w \times \vec r =\) <span id="e_7_1" class ="math-inline-block"></span> = <span id="e_7_2"></span></p>
             </section>
             <section id="Ejercicio 8">
 				<h3>Ejercicio 8</h3>
