--- a/geometry_es.html
+++ b/geometry_es.html
@@ -167,7 +167,21 @@
 	            <li><strong>Cateto opuesto (\(c_o\)):</strong> El lado que se encuentra frente al ángulo \(\theta\).</li>
 	            <li><strong>Cateto contiguo o adyacente (\(c_a\)):</strong> El lado que forma parte del ángulo \(\theta\) (junto a la hipotenusa).</li>
 	        </ul>
-	        <p>Las razones se definen como:</p>
+			<figure class="centered">
+                <svg id="svgA1_2_1"></svg>
+                <figcaption><b>Figura 2.1</b> Posición del cateto contiguo o adyacente y del cateto opuesto, respecto del ángulo \(\theta\).</figcaption>
+            </figure>
+			<h4>⚠️ Importante: Los catetos dependen del ángulo elegido</h4>
+            <p>
+                Es crucial entender que los términos "opuesto" y "contiguo" <strong>no son fijos</strong>; dependen enteramente de qué ángulo agudo estemos utilizando como referencia.
+            </p>
+            <p>
+                Si en lugar del ángulo \(\theta\) (en la base) usáramos el otro ángulo agudo (el superior), los papeles se invertirían: el lado que antes era "opuesto" pasaría a ser el "contiguo" a ese nuevo ángulo, y viceversa. La hipotenusa, sin embargo, nunca cambia.
+            </p>
+            <p>
+                <strong>Regla de oro para física:</strong> Nunca memorices que el seno es "vertical" o el coseno "horizontal". Siempre pregúntate: "¿Este cateto está enfrente de mi ángulo (seno) o lo está tocando (coseno)?".
+            </p>
+	        <p>Las razones principales (respecto al ángulo elegido) se definen como:</p>
 	        <p>
 	            \begin{flalign}
 	                \sin \theta = \frac{\text{cateto opuesto}}{\text{hipotenusa}} = \frac{c_o}{h} \label{eq:A1_2_1_1}
