--- a/geometry_es.html
+++ b/geometry_es.html
@@ -246,6 +246,80 @@
 	            <li><strong>Descomposición de fuerzas:</strong> Cualquier fuerza ejercida con un ángulo inclinado (como la tensión de una cuerda) se divide en una componente horizontal y una vertical mediante el uso de \eqref{eq:A1_2_1_1} y \eqref{eq:A1_2_1_2}.</li>
 	        </ul>
     	</section>
+		<section id="A1_3_Geometria_Circulo">
+	        <h2>A1.3 Geometría del círculo</h2>
+	        <p>
+	            El círculo es una de las figuras más presentes en la física, desde el estudio de las órbitas y motores hasta la propagación de ondas. Mientras que la <strong>circunferencia</strong> es la línea curva cerrada donde todos los puntos están a la misma distancia del centro, el <strong>círculo</strong> es la superficie contenida dentro de ella.
+	        </p>
+	
+	        <h3>A1.3.1 Elementos del círculo</h3>
+	        <p>Para describir un círculo y sus partes, utilizamos los siguientes conceptos:</p>
+	        <ul>
+	            <li><strong>Radio (\(r\)):</strong> Segmento que une el centro con cualquier punto de la circunferencia.</li>
+	            <li><strong>Diámetro (\(d\)):</strong> Segmento que une dos puntos de la circunferencia pasando por el centro. Su longitud es el doble del radio (\(d = 2r\)).</li>
+	            <li><strong>Cuerda:</strong> Segmento que une dos puntos de la circunferencia sin necesidad de pasar por el centro.</li>
+	            <li><strong>Arco (\(s\)):</strong> Porción de la circunferencia comprendida entre dos puntos.</li>
+	            <li><strong>Sector circular:</strong> "Porción de tarta" del círculo delimitada por dos radios y un arco.</li>
+	        </ul>
+	
+	        <h4>Longitud de la circunferencia y área</h4>
+	        <p>
+	            La relación entre la longitud de una circunferencia (\(L\)) y su diámetro es una constante universal llamada <strong>\(\pi\) (pi)</strong>. De forma intuitiva, \(\pi\) (aprox. 3.14159...) representa cuántas veces cabe el diámetro en el perímetro de su círculo.
+	        </p>
+	        <p>
+	            \begin{flalign}
+	                L = 2\pi r \label{eq:A1_3_1_1}
+	            \end{flalign}
+	        </p>
+	        <p>
+	            \begin{flalign}
+	                \text{Área} = \pi r^2 \label{eq:A1_3_1_2}
+	            \end{flalign}
+	        </p>
+	
+	        <h3>A1.3.2 Ángulos en la circunferencia</h3>
+	        <p>En el análisis de movimientos rotatorios, es fundamental distinguir cómo medimos los ángulos:</p>
+	        <ul>
+	            <li><strong>Ángulo central:</strong> Es aquel cuyo vértice está en el centro de la circunferencia y sus lados son dos radios. La medida del arco interceptado es directamente proporcional a este ángulo.</li>
+	            <li><strong>Ángulo inscrito:</strong> Es aquel cuyo vértice está en un punto de la circunferencia y sus lados son dos cuerdas.</li>
+	        </ul>
+	        <p>
+	            <strong>Relación fundamental:</strong> Para un mismo arco, el ángulo central mide exactamente el doble que el ángulo inscrito.
+	        </p>	        
+	
+	        <h3>A1.3.3 Radianes</h3>
+	        <p>
+	            Aunque en la vida cotidiana usamos los grados sexagesimales (0° a 360°), en física la unidad natural de medida es el <strong>radián (rad)</strong>.
+	        </p>
+	        
+	        <h4>Definición</h4>
+	        <p>
+	            Un radián es el ángulo central subtendido por un arco cuya longitud (\(s\)) es igual al radio (\(r\)) de la circunferencia.
+	        </p>	        
+	
+	        <h4>Conversión grados ↔ radianes</h4>
+	        <p>
+	            Puesto que una vuelta completa (360°) equivale a la longitud total de la circunferencia (\(2\pi r\)), la equivalencia fundamental es:
+	        </p>
+	        <p>
+	            \begin{flalign}
+	                360^\circ = 2\pi \text{ rad} \implies 180^\circ = \pi \text{ rad} \label{eq:A1_3_3_1}
+	            \end{flalign}
+	        </p>
+	
+	        <h4>¿Por qué en física se usan radianes?</h4>
+	        <p>
+	            El uso del radián no es caprichoso. Su principal ventaja es que simplifica las ecuaciones de movimiento, ya que permite relacionar directamente magnitudes lineales y angulares sin factores de conversión extraños. Por ejemplo, la longitud de un arco se calcula simplemente como:
+	        </p>
+	        <p>
+	            \begin{flalign}
+	                s = \theta \cdot r \label{eq:A1_3_3_2}
+	            \end{flalign}
+	        </p>
+	        <p>
+	            Esta relación solo es válida si el ángulo \(\theta\) está expresado en <strong>radianes</strong>.
+	        </p>
+	    </section>
         <section id="Sistema_Cartesiano_2D">
             <h2>A1.2 Sistema de Coordenadas Cartesianas en dos dimensiones</h2>
             <p>
