--- a/geometry_es.html
+++ b/geometry_es.html
@@ -261,6 +261,10 @@
 	            <li><strong>Arco (\(s\)):</strong> Porción de la circunferencia comprendida entre dos puntos.</li>
 	            <li><strong>Sector circular:</strong> "Porción de tarta" del círculo delimitada por dos radios y un arco.</li>
 	        </ul>
+			<figure class="centered">
+                <svg id="svgA1_3_1"></svg>
+                <figcaption><b>Figura 3.1</b> Elementos del círculo.</figcaption>
+            </figure>
 	
 	        <h4>Longitud de la circunferencia y área</h4>
 	        <p>
